Updating gradle for jar file creation using gradle

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,19 @@ plugins {
     id 'java-library'
 }
 
+version = '1.0'
+task createJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Implementation-Version': version,
+                'Main-Class': 'cumulative.poetry.Poet'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
+
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
