Updating gradle for jar file creation using gradle

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,19 @@ repositories {
     jcenter()
 }
 
+version = '1.0'
+task createJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Implementation-Version': version,
+                'Main-Class': 'cumulative.poetry.Poet'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
+
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
